<resources>
    <string name="app_name">Beverage Booker</string>
    <string name="already_have_an_account_nclick_to_login">Already have an Account?\nClick to Login</string>
    <string name="Not_a_member_nclick_to_Join">Click to Join</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_here">Log in here</string>
    <string name="drink">Drink</string>
    <string name="food">Food</string>
    <string name="continue_to_menu">Continue to Menu</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="sold_out">SOLD OUT</string>
    <string name="checkout">Checkout</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="options">Options</string>
    <string name="size">Size</string>
    <string name="comment">Comment</string>
    <string name="qty">Qty:</string>
    <string name="delete">Delete</string>
    <string name="userfirstname">UserFirstName</string>
    <string name="userlastname">UserLastName</string>
    <string name="accountpagetitle">accountPageTitle</string>
    <string name="phonenumber">phoneNumber</string>
    <string name="email">email</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="user_last_name">user last name</string>
    <string name="enter_new_password">enter new password</string>
    <string name="change_password">Change Password</string>
    <string name="re_enter_new_password">re-enter new password</string>
    <string name="saveNew">Save</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="need_help">Need help?</string>
    <string name="unit">Unit</string>
    <string name="street_address">Street Address</string>
    <string name="city_bathurst">City: Bathurst</string>
    <string name="post_code_2795">Post Code: 2795</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="the_cafe_only_delivers_to_the_city_of_bathurst_2795">The cafe only delivers to \n the city of Bathurst 2795</string>
    <string name="stock">Stock</string>
    <string name="by_signing_up_you_agree_to_our">By signing up you agree to our</string>
    <string name="payment_error_text">There was an issue with payment. \n Please try placing your order again. \n You have not been charged.</string>
    <string name="database_error_text">There was an issue with our database. \n Please try placing your order again. \n You have not been charged.</string>
    <string name="payment_error_title">Payment Error</string>
    <string name="database_error_title">Database Error</string>
    <string name="ok">OK</string>
    <string name="update_qty">Update Qty</string>
</resources>
