<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light_no_logo"
    tools:context=".activities.AccountActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/menuBarInsert"
        android:name="com.beveragebooker.customer_app.activities.Menubar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <!--    Account title with the users first name in it-->
    <TextView
        android:id="@+id/accountTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/accountpagetitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuBarInsert"
        app:layout_constraintVertical_bias="0.04000002" />

    <!--    users first name-->
    <EditText
        android:id="@+id/userFirstName"
        android:layout_width="159dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:enabled="false"
        android:hint="@string/userfirstname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:drawableStartCompat="@drawable/ic_account_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountTitle" />

    <!--    Users last name-->
    <EditText
        android:id="@+id/userLastName"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:autofillHints=" last name"
        android:background="@null"
        android:enabled="false"
        android:hint="@string/user_last_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintLeft_toRightOf="@+id/userFirstName"
        app:layout_constraintStart_toEndOf="@+id/userFirstName"
        app:layout_constraintTop_toBottomOf="@+id/accountTitle" />

    <!--    User email address-->
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:autofillHints="email address"
        android:background="@null"
        android:enabled="false"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress|text"
        android:textColor="#000000"
        app:drawableStartCompat="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userFirstName" />


<!--    users password...needs to be blanked out or ******-->
    <Button
        android:id="@+id/userPassword"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="#000000"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneNum" />

    <!--users phone number must have 10 digits no spaces-->
    <EditText
        android:id="@+id/userPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/phonenumber"
        android:inputType="number|phone"
        app:drawableStartCompat="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <!--    button to allow editing-->
    <Button
        android:id="@+id/editButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="208dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_edit"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneNum"
        app:layout_constraintVertical_bias="0.07"
        tools:visibility="invisible" />

    <!--    button for saving those changes -->
    <!--    default to hidden-->

    <Button
        android:id="@+id/saveButton"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_save"
        android:enabled="false"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editButton"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneNum" />
    <!--  button for deleting account-->
    <Button
        android:id="@+id/deleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_baseline_delete_forever_24"
        android:text="@string/delete"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/editButton"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneNum" />

    <TextView
        android:id="@+id/textViewNeedHelpAccount"
        android:layout_width="94dp"
        android:layout_height="26dp"
        android:text="@string/need_help"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccentDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

</androidx.constraintlayout.widget.ConstraintLayout>